--- a/style.css
+++ b/style.css
@@ -4,15 +4,15 @@
 }
 
 html {
-  background-color: #1c1c1c;
+  background-color: #121212;
   display: flex;
-  height: 100vh;
   justify-content: center;
 }
 
 body {
   width: 800px;
-  margin-top: 1em;
+  height: 100vh;
+  margin-top: 1.5em;
   position: relative;
 }
 
@@ -42,8 +42,10 @@ header a {
 
 main {
   width: 100%;
-  height: 100vh;
-  background-color: #121212;
+  height: 400vh;
+  padding-top: 7em;
+  color: white;
+  background-color: #1c1c1c;
 }
 
 form {
@@ -99,4 +101,93 @@ form button:active {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 200px;
+}
+
+.movie-container {
+  width: 640px;
+  height: 254.69px;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  gap: 30px;
+  margin-bottom: 4em;
+}
+
+.movie-poster {
+  width: 50%;
+  border-radius: 5px;
+}
+
+.movie-details {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  height: 20px;
+  margin-top: 1em;
+}
+
+.genre,
+.genre div {
+  display: flex;
+  align-items: center;
+}
+
+.genre-details {
+  margin-right: 1em;
+  display: flex;
+}
+
+.mins {
+  margin-right: 1em;
+}
+
+.watchlist {
+  margin-left: 0.5em;
+}
+
+.movie-p {
+  font-size: 1.3rem;
+  line-height: 1.5;
+  color: #a5a5a5;
+  margin: 0;
+}
+
+.movie-details h2 {
+  font-weight: 550;
+}
+
+.genre-details span {
+  font-weight: 350;
+}
+
+hr {
+  background-color: #4b4a4a;
+  margin-bottom: 3em;
+  width: 80%;
+  border: none;
+  height: 3px;
+}
+
+.add-watchlist {
+  cursor: pointer;
+}
+
+.watchlist-msg {
+  text-align: center;
+  margin-top: 20%;
+}
+
+.watchlist-msg div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+
+.watchlist-msg h1 {
+  color: #787878;
+}
+
+.watchlist-msg div img {
+  cursor: pointer;
 }
